--- a/.github/workflows/tests.yml
+++ b/.github/workflows/tests.yml
@@ -1,11 +1,6 @@
-name: Make test scripts executable
-run: chmod +x run_tests.sh
-
 name: Run Tests
 
 on:
-  push:
-    branches: [ main ]
   pull_request:
     branches: [ main ]
 
@@ -26,6 +21,9 @@ jobs:
         run: |
           python -m pip install --upgrade pip
           pip install -r requirements.txt
+
+      - name: Make script executable
+        run: chmod +x run_tests.sh
 
       - name: Run tests
         run: ./run_tests.sh
